# pixelforge

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: overview.md
docs/decisions/: 0001-raw-rgb-domain-model.md  0002-vectorized-mathematical-generators.md
output/: harmonic-waves.json
scripts/: run_quality_checks.sh
src/pixel_forge/: __init__.py  __main__.py
src/pixel_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pixel_forge/aesthetics/: __init__.py
src/pixel_forge/animation/: __init__.py  animation_randomness.py  frame_phase.py  frame_timing.py  loop_math.py  motion_profiles.py  protocols.py
src/pixel_forge/cli/: __init__.py  main.py  parser.py
src/pixel_forge/core/: __init__.py
src/pixel_forge/generators/: __init__.py
src/pixel_forge/image/: __init__.py
src/pixel_forge/metadata/: __init__.py  animation_manifest.py  animation_manifest_writer.py  artwork_manifest.py  manifest_writer.py
src/pixel_forge/randomness/: __init__.py  deterministic_retry.py  random_streams.py  weighted_choice.py
src/pixel_forge/rarity/: __init__.py  rarity_evaluator.py  rarity_tier.py  trait_probability.py
src/pixel_forge/services/: __init__.py  animation_service.py  generation_service.py
src/pixel_forge/shared/: __init__.py
tests/integration/: test_cli.py  test_cli_animate.py
tests/unit/aesthetics/: test_compatibility.py  test_compatibility_reachable.py  test_palette_registry.py  test_quality_evaluator.py
tests/unit/animation/: test_animation_models.py  test_animation_seed.py  (+5 more)
(+108 files in other folders)
