[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-forge"
version = "0.2.0"
description = "A modular command-line toolkit for procedural image generation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "PixelForge Contributors" }
]
dependencies = [
    "numpy>=1.26,<3.0",
    "Pillow>=10.0,<13.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]

[project.scripts]
pixelforge = "pixel_forge.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pixel_forge"]
mypy_path = "src"
